--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <form class="form js__form" action="#">
       <label class="title2" for="userNumber">Intoduce aquí tu número:</label>
       <input class="number js__number" type="number" id="userNumber" placeholder="Ej.11" />    
-      <input class="test js__testButton" type="submit" value="Prueba" />
+      <input class="test js__testButton" type="submit" value="Pruebo" />
     </form>
 
     <p class="track js_track">Pista: Escribe el número y dale a Prueba</p>
