--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <main class="main">
     <form class="form js__form" action="#">
       <label class="title2" for="userNumber">Intoduce aquí tu número:</label>
-      <input class="number js__number" type="number" id="userNumber" placeholder="Ej.11" />    
-      <input class="test js__testButton" type="submit" value="Pruebo" />
+      <input class="number js__userNumberInput" type="number" id="userNumber" placeholder="Ej.11" />    
+      <input class="test js__testBtn" type="submit" value="Prueba" />
     </form>
 
     <p class="track js_track">Pista: Escribe el número y dale a Prueba</p>
