--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </div>
   </header>
   <main class="main">
-    <form class="form js__form">
+    <form class="form js__form" action="#">
       <label class="title2" for="userNumber">Intoduce aquí tu número:</label>
-      <input class="number js__userNumberInput" type="number" id="userNumber" placeholder="Ej.11" />    
+      <input class="number js__userNumberInput" type="number" id="userNumber" placeholder="Ej.11" />
       <input class="test js__testBtn" type="submit" value="Prueba" />
     </form>
 
