--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <div class="title1">
-      <h1 class="article js__title">Adivina el número</h1>
+      <h1 class="article">Adivina el número</h1>
     </div>
   </header>
   <main class="main">
@@ -21,7 +21,7 @@
       <input class="test js__testBtn" type="submit" value="Prueba" />
     </form>
 
-    <p class="track js_track">Pista: Escribe el número y dale a Prueba</p>
+    <p class="track js__track">Pista: Escribe el número y dale a Prueba</p>
 
     <p class="attempts">
       Número de intentos: <span class="js__attempts">0</span>
