Add prevent default

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
   </header>
   <main class="main">
-    <form class="form js__form" action="#">
+    <form class="form js__form">
       <label class="title2" for="userNumber">Intoduce aquí tu número:</label>
       <input class="number js__userNumberInput" type="number" id="userNumber" placeholder="Ej.11" />
       <input class="test js__testBtn" type="submit" value="Prueba" />
